redirect done, main page ready

--- a/public/index.html
+++ b/public/index.html
@@ -2,40 +2,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/assets/htmx.min.js"></script>
-    
+
     <title>Reuben Chong</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon_io/site.webmanifest">
-    <link rel="stylesheet" href="/dist/tailwind.css">
-    
-    <style>
-      @font-face {
-        font-family: "Switzer-Variable";
-        src: url("/assets/fonts/Switzer-Variable.woff2") format("woff2"),
-          url("/assets/fonts/Switzer-Regular.woff") format("woff"),
-          url("/assets/fonts/Switzer-Variable.ttf") format("truetype");
-        font-weight: 100 900;
-        font-display: swap;
-        font-style: normal;
-      }
-      body {
-        font-family: "Switzer-Variable";
-      }
-    </style>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png" />
+    <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
+    <link rel="stylesheet" href="/dist/tailwind.css" />
+    <link rel="stylesheet" href="/dist/global.css" />
   </head>
   <body>
-    <p>Hello, World!</p>
-    <div id="user-info" class="bg-red-100 p-4 rounded-xl">
-      <p>{{.Name}}</p>
-      <button hx-get="/get-info" hx-target="#user-info" hx-swap="innerHTML">Reveal Info</button>
-    </div>
+   <!-- Start building components for your main page -->
+    <h1>Main Page</h1>
   </body>
 </html>
 {{end}}
