background and font color

--- a/public/hello.html
+++ b/public/hello.html
@@ -19,7 +19,7 @@
     <p>Hello, World!</p>
     <div id="user-info" class="bg-red-100 p-4 rounded-xl">
       <p>{{.Name}}</p>
-      <button hx-post="/redirects" hx-redirect="true">Redirect testing</button>
+      <button hx-get="/redirects" hx-redirect="true">Redirect testing</button>
     </div>
     <p>Hello, World!</p>
     <div id="user-info1" class="bg-red-100 p-4 rounded-xl">
