--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,13 @@
     <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
     <link rel="stylesheet" href="/dist/tailwind.css" />
     <link rel="stylesheet" href="/dist/global.css" />
+
   </head>
   <body>
-   <!-- Start building components for your main page -->
-    <h1>Main Page</h1>
+    <button class="bg-indigo-500 ...">Save changes</button>
+    <!-- Start building components for your main page -->
+    <h1 class="bg-black">Main Page</h1>
+    {{template "test" .}}
   </body>
 </html>
 {{end}}
