finalize color and fonts

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,8 @@
 
   </head>
   <body>
-    <button class="bg-indigo-500 ...">Save changes</button>
     <!-- Start building components for your main page -->
-    <h1 class="bg-black">Main Page</h1>
+    <h1>Main Page</h1>
     {{template "test" .}}
   </body>
 </html>
