--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,13 @@
     <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
     <link rel="stylesheet" href="/dist/tailwind.css" />
     <link rel="stylesheet" href="/dist/global.css" />
+    <link rel="stylesheet" href="/dist/common.css" />
+
 
   </head>
   <body>
     <!-- Start building components for your main page -->
-    <h1>Main Page</h1>
-    {{template "test" .}}
+    {{template "intro_deck" .}}
   </body>
 </html>
 {{end}}
