--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/assets/htmx.min.js"></script>
+    <script src="/dist/js/htmx.min.js"></script>
+    <script src="/dist/js/flowbite.min.js"></script>
 
     <title>Reuben Chong</title>
 
@@ -12,15 +13,18 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png" />
     <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
-    <link rel="stylesheet" href="/dist/tailwind.css" />
-    <link rel="stylesheet" href="/dist/global.css" />
-    <link rel="stylesheet" href="/dist/common.css" />
-
-
+    <link rel="stylesheet" href="/dist/css/flowbite.min.css" />
+    <link rel="stylesheet" href="/dist/css/tailwind.css" />
   </head>
   <body>
-    <!-- Start building components for your main page -->
     {{template "intro_deck" .}}
+    {{template "experience"}}
+    
+    <script>
+      htmx.onLoad(function () {
+        initFlowbite();
+      });
+    </script>
   </body>
 </html>
 {{end}}
