--- a/public/intro_deck.html
+++ b/public/intro_deck.html
@@ -1,6 +1,6 @@
 {{define "intro_deck"}}
 <div>
-  <h1 class="global-padding">Reuben Chong!</h1>
+  <h1 class="global-padding">Reuben Chong</h1>
   <p class="global-padding">
     Hi there! I'm a CS undergraduate, focused in fullstack and backend development.
     I enjoy building software with the goal of learning and understanding how things work. 
