--- a/public/footer.html
+++ b/public/footer.html
@@ -1,23 +1,18 @@
 {{define "footer"}}
 <footer class="border-t footer-mt">
-
   <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-    <span class="footer-text text-sm sm:text-center">Reuben Chong © 2023
-  </span>
-  <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+    <span class="footer-text text-sm sm:text-center">Reuben Chong © 2023 </span>
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium sm:mt-0">
       <li>
-          <a href="#" class="hover:underline me-4 md:me-6">About</a>
+        <a href="https://github.com/reubencww" target="_blank" class="me-4 md:me-6"> <i class="fab fa-github"></i></a>
       </li>
       <li>
-          <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+        <a href="https://linkedin.com/in/reubencww" target="_blank" class="me-4 md:me-6"><i class="fab fa-linkedin"></i></a>
       </li>
       <li>
-          <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+        <a href="mailto:reubenchongww2512@gmail.com"> <i class="fas fa-envelope"></i></a>
       </li>
-      <li>
-          <a href="#" class="hover:underline">Contact</a>
-      </li>
-  </ul>
+    </ul>
   </div>
 </footer>
 
