--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,11 @@
     />
   </head>
   <body>
-    <div class="main-body">{{template "intro_deck" .}} {{template "experience"}} {{template "projects"}}</div>
+    <div class="main-body">
+      {{template "intro_deck" .}} 
+      {{template "experience"}} 
+      {{template "projects"}}
+    </div>
     {{template "footer"}}
     <script>
       htmx.onLoad(function () {
