--- a/public/intro_deck.html
+++ b/public/intro_deck.html
@@ -7,7 +7,7 @@
   </p>
   <p class="global-padding">
     I've just finished my internship at <a class="underline" href="https://referralcandy.com" target="_blank">ReferralCandy</a> as a fullstack software engineer.
-    Currently, working on my own projects.
+    Currently, looking for full-time oppotunities and working on some interesting projects.
   </p>
 </div>
 {{end}}
