--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png" />
     <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
-    <link rel="stylesheet" href="/dist/css/flowbite.min.css" />
+    <!-- <link rel="stylesheet" href="/dist/css/flowbite.min.css" /> -->
     <link rel="stylesheet" href="/dist/css/tailwind.css" />
 
+    <!-- Icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -31,11 +32,11 @@
       {{template "projects"}}
     </div>
     {{template "footer"}}
-    <script>
+    <!-- <script>
       htmx.onLoad(function () {
         initFlowbite()
       })
-    </script>
+    </script> -->
   </body>
   <footer></footer>
 </html>
