--- a/public/experience.html
+++ b/public/experience.html
@@ -2,74 +2,67 @@
 <div class="new-section">
   <h1 class="section-header">Experience</h1>
   <div>
-    <div>
-      <a href="https://referralcandy.com" target="_blank">
-        <div class="max-w custom-card rounded-lg">
-          <!-- The columns here -->
-          <div class="grid grid-cols-4 gap-2">
-            <div class="col-span-1">
-              <p class="card-date">Jan — Dec 2023</p>
-            </div>
-            <div class="col-span-3">
-              <p class="card-header">FullStack Software Engineer · ReferralCandy</p>
-              <i class="card-subheader">Internship</i>
-              <p class="card-content">
-                Deliver high-quality, robust production code for a diverse array of projects for ReferralCandy's
-                customers <i>(~100k different merchants and >100m users)</i>. Worked on ReferralCorner, FOLP and
-                campaign states which are part of ReferralCandy's core software product. Enhanced and imlemented
-                internal tooling software <i>Wonka</i> to facilitate day to day operations for customer support
-                engineers.
-              </p>
-              <!-- badges here -->
-              <div class="badge-group">
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">AWS</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">NextJs</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">NodeJs</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">MySQL</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Redis</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">TypeScript</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">JavaScript</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Docker</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Agile</span>
-              </div>
+    <a href="https://referralcandy.com" target="_blank">
+      <div class="max-w custom-card rounded-lg">
+        <!-- The columns here -->
+        <div class="grid grid-cols-4 gap-2">
+          <div class="col-span-1">
+            <p class="card-date">Jan — Dec 2023</p>
+          </div>
+          <div class="col-span-3">
+            <p class="card-header">FullStack Software Engineer · ReferralCandy</p>
+            <i class="card-subheader">Internship</i>
+            <p class="card-content">
+              Deliver high-quality, robust production code for a diverse array of projects for ReferralCandy's customers
+              <i>(~100k different merchants and >100m users)</i>. Worked on ReferralCorner, FOLP and campaign states
+              which are part of ReferralCandy's core software product. Enhanced and imlemented internal tooling software
+              <i>Wonka</i> to facilitate day to day operations for customer support engineers.
+            </p>
+            <!-- badges here -->
+            <div class="badge-group">
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">AWS</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">NextJs</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">NodeJs</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">MySQL</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Redis</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">TypeScript</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">JavaScript</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Docker</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Agile</span>
             </div>
           </div>
         </div>
-      </a>
+      </div>
+    </a>
 
-      <a href="https://www.dsta.gov.sg/home" target="_blank">
-        <div class="max-w custom-card rounded-lg">
-          <!-- The columns here -->
-          <div class="grid grid-cols-4 gap-2">
-            <div class="col-span-1">
-              <p class="card-date">Jun — Aug 2021</p>
-            </div>
-            <div class="col-span-3">
-              <p class="card-header">Software Engineer · DSTA</p>
-              <i class="card-subheader">Internship</i>
-              <p class="card-content">
-                Designed and implemented a web application to consolidate software vulnerabilities 
-                identified in SAST and DAST generated reports. Engineered a web scraper to 
-                scrape data from <i>Defect Dojo</i> for seamless integration into the 
-                application. This process is added into the DevSecOps pipeline. 
-                The application is used by engineering leaders to effectively prioritize vulnerabilities 
-                across various projects.
-              </p>
-              <!-- badges here -->
-              <div class="badge-group">
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Flask</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">PlayWright</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Jenkins</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Python</span>
-                <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Docker</span>
-              </div>
+    <a href="https://www.dsta.gov.sg/home" target="_blank">
+      <div class="max-w custom-card rounded-lg">
+        <!-- The columns here -->
+        <div class="grid grid-cols-4 gap-2">
+          <div class="col-span-1">
+            <p class="card-date">Jun — Aug 2021</p>
+          </div>
+          <div class="col-span-3">
+            <p class="card-header">Software Engineer · DSTA</p>
+            <i class="card-subheader">Internship</i>
+            <p class="card-content">
+              Designed and implemented a web application to consolidate software vulnerabilities identified in SAST and
+              DAST generated reports. Engineered a web scraper to scrape data from <i>Defect Dojo</i> for seamless
+              integration into the application. This process is added into the DevSecOps pipeline. The application is
+              used by engineering leaders to effectively prioritize vulnerabilities across various projects.
+            </p>
+            <!-- badges here -->
+            <div class="badge-group">
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Flask</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">PlayWright</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Jenkins</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Python</span>
+              <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Docker</span>
             </div>
           </div>
         </div>
-      </a>
-
-      
-    </div>
+      </div>
+    </a>
   </div>
 </div>
 {{end}}
