--- a/public/projects.html
+++ b/public/projects.html
@@ -1,7 +1,43 @@
 {{define "projects"}}
 <div class="new-section">
   <h1 class="section-header">Projects</h1>
-  <!-- hmmm -->
-  <p>something something</p>
+  <div>
+    <div class="grid grid-cols-2">
+      <div class="col-span-1 project-card max-w-full">
+        <a class="underline" href="https://github.com/reubencww/question-generation" target="_blank"
+          >Manifest <i class="fas fa-arrow-up rotate-45 arrow"></i
+        ></a>
+        <p>
+          <i>School project</i>. Upload photo, generate questions and answers using open-source AI models for teachers
+          to use in oral examinations. Watch the
+          <a class="underline" href="https://www.youtube.com/watch?v=FgBIiSWrhnE" target="_blank">demo</a>!
+        </p>
+        <div class="badge-group-project">
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">AI</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">RabbitMQ</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">MinIO</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Postgresql</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">VueJs</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Golang</span>
+        </div>
+      </div>
+      <div class="col-span-1 project-card max-w-full">
+        <a class="underline" href="https://github.com/reubencww/Venture" target="_blank"
+          >Venture <i class="fas fa-arrow-up rotate-45 arrow"></i
+        ></a>
+        <p>
+          <i>School project</i>. A full stack web application focused on CICD and security practices. Application allows
+          users to upload application ideas and angel investors to invest in them.
+        </p>
+        <div class="badge-group-project">
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">NextJs</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Stripe API</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Jenkins</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">FireBase</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">TypeScript</span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {{end}}
