--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png" />
     <link rel="manifest" href="/assets/favicon_io/site.webmanifest" />
-    <!-- <link rel="stylesheet" href="/dist/css/flowbite.min.css" /> -->
+    <link rel="stylesheet" href="/dist/css/flowbite.min.css" />
     <link rel="stylesheet" href="/dist/css/tailwind.css" />
 
     <!-- Icons -->
@@ -32,11 +32,11 @@
       {{template "projects"}}
     </div>
     {{template "footer"}}
-    <!-- <script>
+    <script>
       htmx.onLoad(function () {
         initFlowbite()
       })
-    </script> -->
+    </script>
   </body>
   <footer></footer>
 </html>
