--- a/public/intro_deck.html
+++ b/public/intro_deck.html
@@ -3,11 +3,11 @@
   <h1 class="global-padding">Reuben Chong</h1>
   <p class="global-padding">
     Hi there! I'm a CS undergraduate, focused in fullstack and backend development.
-    I enjoy building software with the goal of learning and understanding how things work. 
+    I enjoy building software with the goal of learning new tools and understanding how things work. 
   </p>
   <p class="global-padding">
     I've just finished my internship at <a class="underline" href="https://referralcandy.com" target="_blank">ReferralCandy</a> as a fullstack software engineer.
-    Currently, looking for full-time oppotunities and working on some interesting projects.
+    Currently, looking for full-time oppotunities while working on some personal projects.
   </p>
 </div>
 {{end}}
