--- a/public/projects.html
+++ b/public/projects.html
@@ -4,12 +4,47 @@
   <div>
     <div class="grid grid-cols-2">
       <div class="col-span-1 project-card max-w-full">
+        <a data-popover-target="popover-in-progress" class="underline" href="https://github.com/reubencww/question-generation" target="_blank"
+          >Wroof <i class="fa-solid fa-exclamation arrow"></i></a>
+        <p>
+          <i>Ongoing</i>. Fullstack cross-platform mobile application implemented with Kotlin Multiplatform Mobile.
+          Allows users to book/ pick up pet-related odd jobs (walking, boarding etc).
+        </p>
+        <div class="badge-group-project">
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Kotlin Multiplatform</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Java Springboot</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Postgresql</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Jetpack Compose</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">AWS</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Koin</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Gradle</span>
+        </div>
+      </div>
+      <div class="col-span-1 project-card max-w-full">
+        <a class="underline" href="https://github.com/reubencww/portfolio" target="_blank"
+          >Portfolio <i class="fas fa-arrow-up rotate-45 arrow"></i
+        ></a>
+        <p>
+          A minimalistic portfolio! Exploring HTMX, which lead to usage of golang & LabStack for template redering. Planning to implement a markdown editor for a blog section. 
+        </p>
+        <div class="badge-group-project">
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Golang</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">HTMX</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">TailwindCSS</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Flowbite</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">LabStack - echo</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Vercel</span>
+        </div>
+      </div>
+    </div>
+    <div class="grid grid-cols-2">
+      <div class="col-span-1 project-card max-w-full">
         <a class="underline" href="https://github.com/reubencww/question-generation" target="_blank"
           >Manifest <i class="fas fa-arrow-up rotate-45 arrow"></i
         ></a>
         <p>
-          <i>School project</i>. Upload photo, generate questions and answers using open-source AI models for teachers
-          to use in oral examinations. Watch the
+          Upload photo, generate questions and answers using open-source AI models for teachers to use in oral
+          examinations. Watch the
           <a class="underline" href="https://www.youtube.com/watch?v=FgBIiSWrhnE" target="_blank">demo</a>!
         </p>
         <div class="badge-group-project">
@@ -26,8 +61,8 @@
           >Venture <i class="fas fa-arrow-up rotate-45 arrow"></i
         ></a>
         <p>
-          <i>School project</i>. A full stack web application focused on CICD and security practices. Application allows
-          users to upload application ideas and angel investors to invest in them.
+          A full stack web application focused on CICD and security practices. Application allows users to upload
+          application ideas and angel investors to invest in them.
         </p>
         <div class="badge-group-project">
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">NextJs</span>
@@ -38,6 +73,43 @@
         </div>
       </div>
     </div>
+    <div class="grid grid-cols-2">
+      <div class="col-span-1 project-card max-w-full">
+        <a class="underline" href="https://github.com/reubencww/TrackTogether" target="_blank"
+          >TrackTogether <i class="fas fa-arrow-up rotate-45 arrow"></i
+        ></a>
+        <p>
+          HR mobile application implemented in Kotlin, android studio. MVVM architecture. Technical features: facial
+          recognition, geolocation, NFC.
+        </p>
+        <div class="badge-group-project">
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Kotlin</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">SQLite</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Android</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">FireBase</span>
+        </div>
+      </div>
+      <div class="col-span-1 project-card max-w-full">
+        <a class="underline" href="https://github.com/reubencww/Vraze-MCU" target="_blank"
+          >Vraze-MCU <i class="fas fa-arrow-up rotate-45 arrow"></i
+        ></a>
+        <p>
+          Embedded programming with MSP432 micro-controller. Wifi-enabled remote controlled car, websockets, proximity
+          detection with ultra-sonic module. Watch the
+          <a class="underline" href="https://youtu.be/PuOMWVnvc50" target="_blank">demo</a>!
+        </p>
+        <div class="badge-group-project">
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Embedded</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Websockets</span>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+<div data-popover id="popover-in-progress" role="tooltip" class="project-tooltip absolute z-10 invisible inline-block w-64 text-sm transition-opacity duration-300 rounded-lg shadow-sm opacity-0 text-gray-400">
+  <div class="px-3 py-2">
+      <p>Project currently in progress. Will link the demo once it is up.</p>
+  </div>
+<div data-popper-arrow></div>
 {{end}}
