--- a/public/projects.html
+++ b/public/projects.html
@@ -5,7 +5,8 @@
     <div class="grid grid-cols-2">
       <div class="col-span-1 project-card max-w-full">
         <a data-popover-target="popover-in-progress" class="underline" href="https://github.com/reubencww/question-generation" target="_blank"
-          >Wroof <i class="fa-solid fa-exclamation arrow"></i></a>
+          >Wroof <i class="fa-solid fa-exclamation arrow"></i>
+        </a>
         <p>
           <i>Ongoing</i>. Fullstack cross-platform mobile application implemented with Kotlin Multiplatform Mobile.
           Allows users to book/ pick up pet-related odd jobs (walking, boarding etc).
@@ -106,8 +107,9 @@
 </div>
 
 <div data-popover id="popover-in-progress" role="tooltip" class="project-tooltip absolute z-10 invisible inline-block w-64 text-sm transition-opacity duration-300 rounded-lg shadow-sm opacity-0 text-gray-400">
-  <div class="px-3 py-2">
-      <p>Project currently in progress. Will link the demo once it is up.</p>
-  </div>
-<div data-popper-arrow></div>
+    <div class="px-3 py-2">
+        <p>Project currently in progress. Will link the demo once it is up.</p>
+    </div>
+  <div data-popper-arrow></div>
+</div>
 {{end}}
