--- a/public/projects.html
+++ b/public/projects.html
@@ -32,7 +32,7 @@
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">TailwindCSS</span>
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Flowbite</span>
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">LabStack - echo</span>
-          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Vercel</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Heroku</span>
         </div>
       </div>
     </div>
