no vercel, doesnt support golang template server side rendering

--- a/public/projects.html
+++ b/public/projects.html
@@ -44,7 +44,7 @@
         <p>
           Upload photo, generate questions and answers using open-source AI models for teachers to use in oral
           examinations. Watch the
-          <a class="underline" href="https://www.youtube.com/watch?v=FgBIiSWrhnE" target="_blank">demo</a>!
+          <a class="underline" href="https://www.youtube.com/watch?v=FgBIiSWrhnE" target="_blank">demo</a>.
         </p>
         <div class="badge-group-project">
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">AI</span>
@@ -95,7 +95,7 @@
         <p>
           Embedded programming with MSP432 micro-controller. Wifi-enabled remote controlled car, websockets, proximity
           detection with ultra-sonic module. Watch the
-          <a class="underline" href="https://youtu.be/PuOMWVnvc50" target="_blank">demo</a>!
+          <a class="underline" href="https://youtu.be/PuOMWVnvc50" target="_blank">demo</a>.
         </p>
         <div class="badge-group-project">
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Embedded</span>
