remove href wroof

--- a/public/projects.html
+++ b/public/projects.html
@@ -4,7 +4,7 @@
   <div>
     <div class="grid grid-cols-2">
       <div class="col-span-1 project-card max-w-full">
-        <a data-popover-target="popover-in-progress" class="underline" href="https://github.com/reubencww/question-generation" target="_blank"
+        <a data-popover-target="popover-in-progress" class="underline"
           >Wroof <i class="fa-solid fa-exclamation arrow"></i>
         </a>
         <p>
@@ -43,7 +43,11 @@
         ></a>
         <p>
           Upload photo, generate questions and answers using open-source AI models for teachers to use in oral
-          examinations. Watch the
+          examinations. 
+        </p>
+        <br>
+        <p>
+          Watch the
           <a class="underline" href="https://www.youtube.com/watch?v=FgBIiSWrhnE" target="_blank">demo</a>.
         </p>
         <div class="badge-group-project">
@@ -94,9 +98,11 @@
         ></a>
         <p>
           Embedded programming with MSP432 micro-controller. Wifi-enabled remote controlled car, websockets, proximity
-          detection with ultra-sonic module. Watch the
-          <a class="underline" href="https://youtu.be/PuOMWVnvc50" target="_blank">demo</a>.
+          detection with ultra-sonic module. 
         </p>
+        <br>
+        <p>Watch the
+          <a class="underline" href="https://youtu.be/PuOMWVnvc50" target="_blank">demo</a>.</p>
         <div class="badge-group-project">
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Embedded</span>
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Websockets</span>
