minor badge change

--- a/public/projects.html
+++ b/public/projects.html
@@ -31,8 +31,8 @@
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">HTMX</span>
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">TailwindCSS</span>
           <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Flowbite</span>
-          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">LabStack - echo</span>
-          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Heroku</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">LabStack, echo</span>
+          <span class="badge-item text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Digital Ocean</span>
         </div>
       </div>
     </div>
