--- a/public/experience.html
+++ b/public/experience.html
@@ -14,7 +14,7 @@
             <i class="card-subheader">Internship</i>
             <p class="card-content">
               Deliver high-quality, robust production code for a diverse array of projects for ReferralCandy's customers
-              <i>(~100k different merchants and >100m users)</i>. Worked on ReferralCorner, FOLP and campaign states
+              <i>(~100k different merchants and >700k users)</i>. Worked on ReferralCorner, FOLP and campaign states
               which are part of ReferralCandy's core software product. Enhanced and imlemented internal tooling software
               <i>Wonka</i> to facilitate day to day operations for customer support engineers.
             </p>
