add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,18 @@
         initFlowbite()
       })
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{.GAID}}"></script>
+    <script>
+      console.log("GAID: {{.GAID}}")
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', '{{.GAID}}}');
+    </script>
+
   </body>
 </html>
 {{end}}
